--- a/public/app/themes/studio/views/pages/home.twig
+++ b/public/app/themes/studio/views/pages/home.twig
@@ -2,4 +2,6 @@
 
 {% block content %}
     {% include "partials/banner.twig" %}
+    {% include "partials/block-life.twig" %}
+    {% include "partials/ft-contact.twig" %}
 {% endblock %}
