--- a/public/app/themes/studio/views/partials/footer.twig
+++ b/public/app/themes/studio/views/partials/footer.twig
@@ -1,2 +1,15 @@
-<footer>
+<footer class="block-ft">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <ul class="block-ft__list">
+                    <li><a href="#" title="">Shea</a></li>
+                    <li><a href="#" title="">Apartment Living</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-8">
+                <p class="block-ft__copyright">© 2017 SHEA APARTMENT LIVING. All rights reserved. Privacy Policy. Design by STUDIO.</p>
+            </div>
+        </div>
+    </div>
 </footer>
