--- a/public/app/themes/studio/assets/styles/_helpers.scss
+++ b/public/app/themes/studio/assets/styles/_helpers.scss
@@ -1,105 +1,117 @@
 .hide {
-  display: none !important;
+	display: none !important;
 }
 
 .clearfix {
-  &:before,
-  &:after {
-    content: "";
-    display: table;
-  }
-  &:after { 
-    clear: both; 
-  }
+	&:before,
+	&:after {
+		content: "";
+		display: table;
+	}
+	&:after {
+		clear: both;
+	}
 }
 
 .left {
-  float:left;
+	float: left;
 }
 
 .right {
-  float:right;
+	float: right;
 }
 
 .full-width {
-  width:100%;
+	width: 100%;
 }
 
 .half-width {
-  width:50%;
+	width: 50%;
 }
 
 .third-width {
-  width:33%;
+	width: 33%;
 }
 
-.quarter-width  {
-  width:25%;
+.quarter-width {
+	width: 25%;
 }
 
 .fixed {
-  position: fixed;
+	position: fixed;
 }
 
 .relative {
-  position: relative;
+	position: relative;
 }
 
 .absolute {
-  position: absolute;
+	position: absolute;
 }
 
 .static {
-  position: static;
+	position: static;
 }
 
 .text-left {
-  text-align:left;
+	text-align: left;
 }
 
 .text-center {
-  text-align: center;
+	text-align: center;
 }
 
 .text-right {
-  text-align: right;
+	text-align: right;
 }
 
 .text-uppercase {
-  text-transform: uppercase;
+	text-transform: uppercase;
 }
 
-@include breakpoint(tablet) { 
-  .hide-for-small {
-    display: none !important;
-  }
-  .show-for-small {
-    display: block !important;
-  }
-}
-
-@include breakpoint(phone) {
-  .hide-for-small {
-    display: none !important;
-  }
-  .show-for-small {
-    display: block !important;
-  }
+.w-100 {
+	width: 100%;
 }
 
 @include breakpoint(tablet) {
-  .show-for-medium-up {
-    display: block !important;
-  }
-  .hide-for-medium-up {
-    display: none !important;
-  }
+	.hide-for-small {
+		display: none !important;
+	}
+	.show-for-small {
+		display: block !important;
+	}
 }
+
+@include breakpoint(phone) {
+	.hide-for-small {
+		display: none !important;
+	}
+	.show-for-small {
+		display: block !important;
+	}
+}
+
+@include breakpoint(tablet) {
+	.show-for-medium-up {
+		display: block !important;
+	}
+	.hide-for-medium-up {
+		display: none !important;
+	}
+}
+
 @include breakpoint(desktop) {
-  .show-for-medium-up {
-    display: block !important;
-  }
-  .hide-for-medium-up {
-    display: none !important;
-  }
+	.show-for-medium-up {
+		display: block !important;
+	}
+	.hide-for-medium-up {
+		display: none !important;
+	}
+}
+
+%absolute-center {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	@include transform(translate(-50%, -50%));
 }
