--- a/public/app/themes/studio/assets/styles/_mixins.scss
+++ b/public/app/themes/studio/assets/styles/_mixins.scss
@@ -1,11 +1,29 @@
 @mixin breakpoint($class) {
-  @if $class == desktop {
-    @media (min-width: 1024px) { @content; }
-  }
-  @else if $class == tablet {
-    @media (min-width: 768px) and (max-width:1024px) { @content; }
-  }
-  @else if $class == phone {
-    @media (max-width:768px) { @content; }
-  }
+	@if $class == desktop {
+		@media (min-width: 1024px) {
+			@content;
+		}
+	} @else if $class == tablet {
+		@media (min-width: 768px) and (max-width: 1024px) {
+			@content;
+		}
+	} @else if $class == phone {
+		@media (max-width: 768px) {
+			@content;
+		}
+	}
+}
+
+@mixin transition($transition...) {
+	-moz-transition:    $transition;
+	-o-transition:      $transition;
+	-webkit-transition: $transition;
+	transition:         $transition;
+}
+
+@mixin transform($transform) {
+	-webkit-transform: $transform;
+	-ms-transform: $transform; // IE9 only
+	-o-transform: $transform;
+	transform: $transform;
 }
