--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -2,5 +2,7 @@
 @import "mixins";
 @import "helpers";
 @import "global";
-
 @import "blocks/banner";
+@import "blocks/life";
+@import "blocks/social";
+@import "blocks/footer";
