--- a/public/app/themes/studio/views/partials/banner.twig
+++ b/public/app/themes/studio/views/partials/banner.twig
@@ -1,6 +1,10 @@
 <section class="block-banner">
-    <div class="row">
-        <div class="block-banner__thumb" style="background-image: url('{{site.url}}/app/themes/studio/assets/images/Quincy_101217_72res.jpg')">
+    <div class="block-banner__thumb" style="background-image: url('{{site.url}}/app/themes/studio/assets/images/banner.jpg')"></div>
+    <div class="block-banner__detail">
+        <div class="block-banner__logo">
+            <img src="{{site.url}}/app/themes/studio/assets/images/logo/logo-white.png" align="Quincy">
         </div>
     </div>
+
+    <a href="#block-life" title="" class="scroll-next-section"><i class="fa fa-caret-down"></i></a>
 </section>
