--- a/public/app/themes/studio/assets/styles/_config.scss
+++ b/public/app/themes/studio/assets/styles/_config.scss
@@ -87,6 +87,7 @@ $white                    : #ffffff;
 $main-color               : #D4A358;
 $gray-color               : #E5E5E6;
 $luxor-gold               : #a17830;
+$main-text-color          : #35383A;
 
 // Set main colors
 $primary-color            : $black;
