--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 @import "helpers";
 @import "global";
-@import "blocks/banner";
+@import "blocks/header";
 @import "blocks/life";
 @import "blocks/social";
 @import "blocks/footer";
