--- a/public/app/themes/studio/assets/styles/blocks/_social.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_social.scss
@@ -5,5 +5,13 @@
 	li {
 		display: inline-block;
 		vertical-align: middle;
+		width: 30px;
+		height: 30px;
+		background-color: $main-color;
+		line-height: 30px;
+
+		a {
+			color: $white;
+		}
 	}
 }
