--- a/public/app/themes/studio/views/partials/ft-contact.twig
+++ b/public/app/themes/studio/views/partials/ft-contact.twig
@@ -3,19 +3,7 @@
         <div class="row flexlayout">
             <div class="col-sm-6">
                 <div class="block-ft-contact__left">
-                    <img src="{{site.url}}/app/themes/studio/assets/images/logo/logo-black.png" align="Quincy">
-                    <address>
-                        1776 Curtis Street, Denver, CO 80202<br/>
-                        <a href="tel:123.456.7890" title="phone">123.456.7890</a>
-                    </address>
-                    <ul class="block-social">
-                        <li>
-                            <a href="#" title=""><i class="fa fa-facebook-f"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" title=""><i class="fa fa-twitter"></i></a>
-                        </li>
-                    </ul>
+                    {% include "partials/address.twig" %}
                 </div>
             </div>
             <div class="col-sm-6">
