--- a/public/app/themes/studio/views/partials/ft-contact.twig
+++ b/public/app/themes/studio/views/partials/ft-contact.twig
@@ -2,12 +2,12 @@
     <div class="container">
         <div class="row flexlayout">
             <div class="col-sm-6">
-                <div class="block-ft-contact__left">
+                <div class="block-ft-contact__left box-address">
                     {% include "partials/address.twig" %}
                 </div>
             </div>
             <div class="col-sm-6">
-                <div id="map-contact"></div>
+                <div id="map-contact" style="min-height: 300px"></div>
             </div>
         </div>
     </div>
