--- a/public/app/themes/studio/views/partials/header.twig
+++ b/public/app/themes/studio/views/partials/header.twig
@@ -32,7 +32,7 @@
 </header>
 
 <div class="quick-search">
-    <div class="title visible-xs">{{global.title_qs}}</div>
+    <div class="title">{{global.title_qs}}</div>
     {% for item in global.item_qs %}
         <a href="{{item.link}}">
             {{item.label}}
