--- a/public/app/themes/studio/assets/styles/blocks/_life.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_life.scss
@@ -1,5 +1,9 @@
 .block-life {
-	padding: 30px 0;
+	padding: 10px 0 0;
+
+	@include breakpoint(tablet) {
+		padding: 30px 0;
+	}
 
 	header {
 		text-align: center;
@@ -18,8 +22,12 @@
 
 	&__item {
 		position: relative;
-		margin-bottom: 30px;
+		margin-bottom: 15px;
 		overflow: hidden;
+
+		@include breakpoint(tablet) {
+			margin-bottom: 30px;
+		}
 
 		&:hover & {
 			&__thumb {
@@ -31,6 +39,13 @@
 				opacity: 1;
 				visibility: visible;
 				bottom: 0;
+			}
+		}
+
+		&.is-visible & {
+			&__thumb {
+				-webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
+				filter: grayscale(0);
 			}
 		}
 
@@ -48,17 +63,23 @@
 		}
 
 		&__detail {
-			position: absolute;
-			left: 15px;
-			right: 15px;
 			color: $white;
 			text-align: center;
 			padding: 25px 45px;
-			opacity: 0;
-			visibility: hidden;
-			bottom: -100%;
 			background-color: rgba($black, 0.7);
 			@include transition(all 0.5s ease-in-out);
+
+			@include breakpoint(tablet) {
+				position: absolute;
+				left: 15px;
+				right: 15px;
+				bottom: -100%;
+				opacity: 0;
+				visibility: hidden;
+			}
+		}
+		img {
+			width: 100%;
 		}
 	}
 }
