--- a/public/app/themes/studio/assets/styles/blocks/_social.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_social.scss
@@ -5,13 +5,19 @@
 	li {
 		display: inline-block;
 		vertical-align: middle;
-		width: 30px;
-		height: 30px;
-		background-color: $main-color;
-		line-height: 30px;
+		background-color: $luxor-gold;
+
+		+li {
+			margin-left: 5px;
+		}
 
 		a {
 			color: $white;
+			width: 30px;
+			height: 30px;
+			line-height: 30px;
+			display: block;
+			text-align: center;
 		}
 	}
 }
