--- a/public/app/themes/studio/assets/styles/application.scss
+++ b/public/app/themes/studio/assets/styles/application.scss
@@ -7,9 +7,10 @@
 @import "components/slickslider";
 
 @import "blocks/header";
-@import "blocks/life";
+@import "blocks/_hover";
 @import "blocks/social";
 @import "blocks/amenity";
+@import "blocks/location";
 
 
 @import "blocks/footer";
