--- a/public/app/themes/studio/views/partials/ft-contact.twig
+++ b/public/app/themes/studio/views/partials/ft-contact.twig
@@ -7,7 +7,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <div id="map-contact" style="min-height: 300px"></div>
+                <div id="map-contact" class="map-contact" style="min-height: 300px"></div>
             </div>
         </div>
     </div>
