--- a/public/app/themes/studio/assets/styles/blocks/_header.scss
+++ b/public/app/themes/studio/assets/styles/blocks/_header.scss
@@ -1,6 +1,14 @@
 .block-header {
 	position: relative;
 
+	&:before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(#000,0.6 );
+	}
+
 	&__thumb {
 		height: 100vh;
 		background-size: cover;
